application/brennoflavio/home-classifier/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-classifier
  namespace: home-classifier
spec:
  type: ClusterIP
  selector:
    app: home-classifier
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
